# obsidian-smart-workflow

./: .env.example  .eslintrc.json  .gitignore  .prettierrc  README.md  README_CN.md  esbuild.config.mjs  eslint.config.mjs  manifest.json  package.json  pnpm-lock.yaml  styles.css  tsconfig.json  versions.json
.github/workflows/: README.md  build-rust.yml  release.yml
plugin-package/: manifest.json  styles.css
pty-server/: Cargo.toml
pty-server/src/: main.rs  shell.rs
rust-servers/: Cargo.toml  README.md  README_CN.md
rust-servers/src/: main.rs  router.rs  server.rs
rust-servers/src/llm/: mod.rs  response.rs  sse_parser.rs  thinking.rs
rust-servers/src/pty/: mod.rs  session.rs  shell.rs
rust-servers/src/utils/: language.rs  mod.rs
rust-servers/src/voice/: beep.rs  config.rs  mod.rs
scripts/: README.md  build-rust.js  install-dev.js  package-plugin.js  quick-install.js
src/: main.ts
src/core/events/: TypedEventEmitter.ts  index.ts
src/i18n/: i18nService.ts  types.ts
src/i18n/locales/: en.ts  zh-CN.ts
src/services/ai/: aiClient.ts  connectionTester.ts  endpointNormalizer.ts  errors.ts  index.ts  modelFetcher.ts  modelTypeInferrer.ts  requestBuilder.ts  responseParser.ts  streamHandler.ts  thinkingProcessor.ts  types.ts
src/settings/: settings.ts  settingsTab.ts  types.ts
src/types/: css.d.ts
src/ui/chat/: chatView.ts
tests/: ai-client-validation.ts  ai-components-validation.ts  secret-storage-security-validation.ts  test-pty-server.js  test-text-processing-logic.js  test-text-processing.ts  test-unified-server.js  test-voice-server.js
(+104 files in other folders)
